style.css
/* ... */
.main .downloads-container .inside .type-download {
	width: 280px;
	float: left;
	margin-right: 60px;
	margin-bottom: 37.5px;
	min-height: 320px;
}

.main .downloads-container .inside .type-download.download-clear {
	margin-right: 0;
}

.main .downloads-container .inside .type-download .download-image {
	position: relative;
}

.main .downloads-container .inside .type-download .download-image .overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 210px;
	opacity: 0;
	background: rgba( 0, 0, 0, 0.8 );
	-webkit-transition: opacity .15s linear;
	-moz-transition: opacity .15s linear;
	-o-transition: opacity .15s linear;
	-ms-transition: opacity .15s linear;
	transition: opacity .15s linear;
}

.main .downloads-container .inside .type-download:hover .download-image .overlay {
	opacity: 1;
}

.main .downloads-container .inside .type-download .download-image .overlay form {
	display: inline-block;
	vertical-align: top;
}

.main .downloads-container .inside .type-download .download-image .overlay form {
	margin-left: 20px;
}

.main .downloads-container .inside .type-download .download-image .overlay .edd-add-to-cart,
.main .downloads-container .inside .type-download .download-image .overlay .edd-add-to-cart-trigger,
.main .downloads-container .inside .type-download .download-image .overlay a[rel="bookmark"],
.main .downloads-container .inside .type-download .download-image .overlay form .edd_go_to_checkout {
	display: inline-block;
	text-transform: uppercase;
	padding: 6px 13px;
	color: #fff;
	text-align: center;
	height: auto;
	margin: 90px 5px;
	-webkit-transition: all .15s linear;
	-moz-transition: all .15s linear;
	-o-transition: all .15s linear;
	-ms-transition: all .15s linear;
	transition: all .15s linear;
	border: 1px solid #fff;
}

.main .downloads-container .inside .type-download .download-image .overlay .edd-add-to-cart-trigger + .edd_download_purchase_form {
	display: none;
}

.main .downloads-container .inside .type-download .download-image .overlay form .edd_go_to_checkout {
	margin-left: 0;
}

.main .downloads-container .inside .type-download .download-image .overlay .edd-add-to-cart-trigger {
	margin-left: 25px;
}

.main .downloads-container .inside .type-download .download-image .overlay .edd-add-to-cart:hover,
.main .downloads-container .inside .type-download .download-image .overlay .edd-add-to-cart-trigger:hover,
.main .downloads-container .inside .type-download .download-image .overlay a[rel="bookmark"]:hover,
.main .downloads-container .inside .type-download .download-image .overlay form .edd_go_to_checkout:hover {
	background: #fff;
	color: #000;
}

.main .downloads-container .inside .type-download .download-image .overlay form .edd-add-to-cart span { display: block; }

.main .downloads-container .inside .type-download .download-image .overlay form .edd-add-to-cart .edd-loading i {
	color: #262626 !important;
}

.main .downloads-container .inside .type-download .download-title {
	margin: 15px 0 0;
	border-bottom: 2px solid #ddd;
	padding-bottom: 10px;
}

.main .downloads-container .view-more-button-div {
	width: 960px;
	margin: 0 auto;
}

.main .downloads-container .view-more-button-div .view-more-button {
	display: block;
	margin-bottom: 0;
}

.main .downloads-container .view-more-button-div .view-more-button a {
	font-size: 18px;
	font-size: 1.8rem;
	display: block;
	padding: 9px 0;
	text-align: center;
	text-transform: uppercase;
	border: 1px solid #e56363;
}

.main .downloads-container .view-more-button-div .view-more-button a:hover {
	background: #e56363;
	color: #fff;
}

.main .testimonials-container .type-testimonial .quote {
	font-family: Georgia, serif;
	font-style: italic;
	font-size: 20px;
	font-size: 2rem;
	text-align: center;
	letter-spacing: -0.5px;
}

.main .testimonials-container .type-testimonial .author {
	text-align: right;
	text-transform: uppercase;
	font-weight: 600;
}

/**
 * 7 Templates
 * -----------------------------------------------------------------------------
 */

/**
 * Global
 */
.main .container,
.inside {
	width: 960px;
	margin: 0 auto;
}

.main .content {
	width: 680px;
	float: left;
}

.main .sidebar {
	float: right;
	width: 250px;
}

.single-title-block .inside {
	border-top: 2px solid #404040;
	border-bottom: 2px solid #404040;
	padding: 25px 0;
	margin-bottom: 25px;
}

.single-title-block h1 {
	text-align: center;
	text-transform: uppercase;
}

.single-title-block .entry-date,
.single-title-block .term-description {
	text-align: center;
	text-transform: uppercase;
	font-weight: 300;
	margin-bottom: 0;
	font-size: 18px;
	font-size: 1.8rem;
	letter-spacing: -0.05em;
}

.table-fancy > tbody > tr:nth-child(odd) > td,
.table-fancy > tbody > tr:nth-child(odd) > th {
	background: transparent;
}

.table-fancy > thead > tr > th,
.table-fancy > tbody > tr > td,
.table-fancy > tfoot > tr > th {
	border-bottom: 2px solid #eee;
	padding: 9px 3px;
}

.table-fancy > tbody > tr:nth-child(even) > td,
.table-fancy > tbody > tr.selected-row > td,
.table-fancy > tbody > tr:nth-child(even) > th,
.table-fancy > tbody > tr.selected-row > th {
	background-color: #f9f9f9;
}

/**
 * Single Download
 */
.single-title-block .rating-info {
	text-transform: uppercase;
	text-align: center;
	color: #555;
}

.single-download .already-in-cart {
	margin-bottom: 0;
	font-weight: 600;
}

.single-download .edd_go_to_checkout,
.single-download .edd-add-to-cart {
	width: 100%;
	display: block;
	text-align: center;
	padding: 3px 8px;
	margin: 8px 0 15px;
	border: 1px solid #e56363;
	text-transform: uppercase;
}

.single-download .edd_go_to_checkout:hover,
.single-download .edd-add-to-cart:hover {
	background: #e56363;
	color: #fff;
}

.single-download .download-price {
	display: block;
	text-align: center;
	padding: 3px 8px;
	border: 1px solid #333;
	width: 100%;
}

/**
 * Not found
 */
#post-0 .search-form input {
	width: 320px;
}

#post-0 .search-form button {
	margin-left: -4px;
}
/* ... */

